--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "keywords": [
     "api",
@@ -19,6 +20,7 @@
   "author": "Thomas Mechessa",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "@types/cli-color": "^2.0.4",
     "@types/express-rate-limit": "^6.0.0",
     "@types/mongoose": "^5.11.97",
@@ -38,8 +40,11 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
+    "prisma": "^5.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
