--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express-rate-limit": "^6.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.7",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
     "bcrypt": "^5.1.1",
     "cli-color": "^2.0.3",
@@ -37,6 +38,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
