--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "chai": "^4.3.10",
     "concurrently": "^8.2.2",
     "mocha": "^10.2.0",
-    "prisma": "^5.5.2",
+    "prisma": "^5.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
