--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,5 +15,9 @@ jobs:
           node-version: "18.x"
       - name: Install dependencies
         run: npm install
+
+      - name: Set Environment Variables
+        run: echo "DATABASE_URL=${DB_URL}" >> $GITHUB_ENV
+
       - name: Run test
         run: npm test
