--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Set Environment Variables
-        run: echo "DATABASE_URL=${DB_URL}" >> $GITHUB_ENV
+      - name: Run Docker
+        run: docker compose up -d
 
       - name: Run test
         run: npm test
