--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
     "bcrypt": "^5.1.1",
+    "chai": "^4.3.10",
     "chai-http": "^4.4.0",
     "cli-color": "^2.0.3",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "chai": "^4.3.10",
-    "concurrently": "^8.2.2",
-    "mocha": "^10.2.0",
     "prisma": "^5.5.2"
   },
   "devDependencies": {
