--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon ./src/index.ts",
-    "migrate": "npx prisma migrate dev --name init"
+    "migrate": "npx prisma migrate dev --name init",
+    "deploy": "cd ./src/public/frontend && npm run build && cd .. && cd .. npm run build"
   },
   "keywords": [
     "api",
