--- a/src/public/frontend/package.json
+++ b/src/public/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -23,6 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-router-dom": "^6.18.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
